--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -5,4 +5,18 @@ ext {
 libraries.guava = 'com.google.guava:guava:18.0'
 libraries.junit = 'junit:junit:4.11'
 libraries.commons_csv = 'org.apache.commons:commons-csv:1.2'
-libraries.chabis = files("gradle/lib/chabis-0.1.0.jar") // until it is available on maven central
+libraries.chabis = files("gradle/lib/chabis-0.1.0.jar") /*
+ * Copyright 2015 Rahel Lüthy
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ * http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */ // until it is available on maven central
