--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,11 +1,4 @@
-ext {
-    libraries = [:]
-}
-
-libraries.guava = 'com.google.guava:guava:18.0'
-libraries.junit = 'junit:junit:4.11'
-libraries.commons_csv = 'org.apache.commons:commons-csv:1.2'
-libraries.chabis = files("gradle/lib/chabis-0.1.0.jar") /*
+/*
  * Copyright 2015 Rahel Lüthy
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -19,4 +12,13 @@ libraries.chabis = files("gradle/lib/chabis-0.1.0.jar") /*
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */ // until it is available on maven central
+ */
+
+ext {
+    libraries = [:]
+}
+
+libraries.guava = 'com.google.guava:guava:18.0'
+libraries.junit = 'junit:junit:4.11'
+libraries.commons_csv = 'org.apache.commons:commons-csv:1.2'
+libraries.chabis = files("gradle/lib/chabis-0.1.0.jar")  // until it is available on maven central
