#1: Resolve 'ch.netzwerg:chabis:0.1.1' via jcenter

--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,7 @@ subprojects {
     version = rootProject.version
 
     repositories {
-        mavenLocal()
-        mavenCentral()
+        jcenter()
     }
 
     dependencies {
