--- a/build.gradle
+++ b/build.gradle
@@ -16,14 +16,15 @@
 
 plugins {
     id 'ch.netzwerg.release' version '1.1.0'
+    id 'com.jfrog.bintray' version '1.3.1'
 }
 
-apply from: "gradle/dependencies.gradle"
-
+apply from: 'gradle/dependencies.gradle'
 
 subprojects {
 
     apply plugin: 'java'
+    apply from: '../gradle/publish.gradle'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
