--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,17 @@
  * limitations under the License.
  */
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
+    }
+}
+
 plugins {
     id 'ch.netzwerg.release' version '1.1.0'
-    id 'com.jfrog.bintray' version '1.3.1'
 }
 
 apply from: 'gradle/dependencies.gradle'
@@ -47,5 +55,5 @@ subprojects {
 
 release {
     dependsOn subprojects.build
-    push = true
+    push = false
 }
