--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
-sudo: false
 language: java
 jdk:
   - oraclejdk8
 env:
   - TERM=dumb
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install --only-upgrade -y oracle-java8-installer
 install:
   - /bin/true
 script:
