--- a/paleo-io/build.gradle
+++ b/paleo-io/build.gradle
@@ -14,8 +14,17 @@
  * limitations under the License.
  */
 
+apply plugin: 'scala'
+
+sourceSets.main.scala.srcDir "src/main/java"
+sourceSets.main.java.srcDirs = []
+
+sourceSets.test.scala.srcDir "src/test/java"
+sourceSets.test.java.srcDirs = []
+
 dependencies {
     compile project(':paleo-core')
     compile libraries.commons_csv
     compile libraries.jackson
+    compile libraries.scala
 }
