--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -24,3 +24,8 @@ libraries.jackson = 'com.fasterxml.jackson.core:jackson-databind:2.6.3'
 
 libraries.junit = 'junit:junit:4.11'
 libraries.chabis = 'ch.netzwerg:chabis:0.2.0'
+
+def scalaVersion = '2.11.7'
+libraries.scala = "org.scala-lang:scala-library:$scalaVersion"
+libraries.scalaTools = ["org.scala-lang:scala-compiler:$scalaVersion",
+                        ext.libraries.scala]
