--- a/paleo-io/build.gradle
+++ b/paleo-io/build.gradle
@@ -14,8 +14,22 @@
  * limitations under the License.
  */
 
+plugins {
+    id "me.champeau.gradle.jmh" version "0.2.0"
+}
+
+apply plugin: 'idea'
+
 dependencies {
     compile project(':paleo-core')
     compile libraries.commons_csv
     compile libraries.jackson
+}
+
+idea.module {
+    scopes.PROVIDED.plus += [ configurations.jmh ]
+}
+
+jmh {
+    jmhVersion = '1.11.3'
 }
