#14: Simplify parsing & handle column count inconsistencies

--- a/paleo-io/build.gradle
+++ b/paleo-io/build.gradle
@@ -27,6 +27,13 @@ sourceSets.main.java.srcDirs = []
 sourceSets.test.scala.srcDir "src/test/java"
 sourceSets.test.java.srcDirs = []
 
+tasks.withType(ScalaCompile) {
+    // Use incremental compilation
+    scalaCompileOptions.useAnt = false
+    // Enable Scala warnings output
+    scalaCompileOptions.additionalParameters = ["-feature", "-Xexperimental"]
+}
+
 dependencies {
     compile project(':paleo-core')
     compile libraries.commons_csv
