#25: Check for $BINTRAY_API_KEY before trying to init credentials

--- a/build.gradle
+++ b/build.gradle
@@ -38,24 +38,26 @@ allprojects {
     group = 'ch.netzwerg'
     version = rootProject.version
 
-    if (project.hasProperty("BINTRAY_USER")) {
-        bintray {
-            dryRun = project.hasProperty('dryRun') && project.dryRun.toBoolean()
+    bintray {
+        dryRun = project.hasProperty('dryRun') && project.dryRun.toBoolean()
+        if (project.hasProperty('BINTRAY_USER')) {
             user = "$BINTRAY_USER"
+        }
+        if (project.hasProperty('BINTRAY_API_KEY')) {
             key = "$BINTRAY_API_KEY"
-            configurations = ['published', 'archives']
-            pkg {
-                repo = 'maven'
-                name = 'paleo'
-                licenses = ['Apache-2.0']
-                desc = 'Immutable Java 8 data frames with typed columns'
-                websiteUrl = 'https://github.com/netzwerg/paleo'
-                issueTrackerUrl = 'https://github.com/netzwerg/paleo/issues'
-                vcsUrl = 'https://github.com/netzwerg/paleo.git'
-                version {
-                    name = project.version
-                    vcsTag = project.release.tagName
-                }
+        }
+        configurations = ['published', 'archives']
+        pkg {
+            repo = 'maven'
+            name = 'paleo'
+            licenses = ['Apache-2.0']
+            desc = 'Immutable Java 8 data frames with typed columns'
+            websiteUrl = 'https://github.com/netzwerg/paleo'
+            issueTrackerUrl = 'https://github.com/netzwerg/paleo/issues'
+            vcsUrl = 'https://github.com/netzwerg/paleo.git'
+            version {
+                name = project.version
+                vcsTag = project.release.tagName
             }
         }
     }
