--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,13 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.3.1'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath 'me.champeau.gradle:jmh-gradle-plugin:0.2.0'
     }
 }
 
 plugins {
-    id 'ch.netzwerg.release' version '1.1.0'
+    id 'ch.netzwerg.release' version '1.2.4'
 }
 
 apply from: 'gradle/dependencies.gradle'
@@ -44,7 +44,7 @@ allprojects {
         if (project.hasProperty('BINTRAY_API_KEY')) {
             key = "$BINTRAY_API_KEY"
         }
-        configurations = ['published', 'archives']
+        configurations = ['published']
         pkg {
             repo = 'maven'
             name = 'paleo'
