#38: Fix IntelliJ IDEA 'Output path is shared...' error

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,11 @@ allprojects {
             }
         }
     }
+
+    idea.module {
+        inheritOutputDirs = true
+    }
+
 }
 
 subprojects {
