--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -17,16 +17,15 @@ ext {
     versions = [:]
 }
 
-def vavrVersion = '0.9.1'
-libraries.vavr = "io.vavr:vavr:$vavrVersion"
-libraries.jackson = ['com.fasterxml.jackson.core:jackson-databind:2.8.9', "io.vavr:vavr-jackson:$vavrVersion"]
+libraries.vavr = "io.vavr:vavr:0.10.2"
+libraries.jackson = ['com.fasterxml.jackson.core:jackson-databind:2.9.10.1', "io.vavr:vavr-jackson:0.10.2"]
 
 libraries.junit = 'junit:junit:4.12'
 libraries.chabis = 'ch.netzwerg:chabis:0.2.0'
 
-def scalaVersion = '2.12.3'
+def scalaVersion = '2.12.10'
 libraries.scala = "org.scala-lang:scala-library:$scalaVersion"
 libraries.scalaTools = ["org.scala-lang:scala-compiler:$scalaVersion",
                         ext.libraries.scala]
 
-versions.jmhVersion = '1.19'
+versions.jmhVersion = '1.21'
